[package]
name = "embedded_cylinder"
version = "1.0.3"
edition = "2021"
license-file = "LICENSE"
description = "Cylinder is a library for embedded rust that provides type-safe inter MCU/MPU communication with common protocols like I2C, SPI, and CAN"
repository = "https://github.com/maxall41/cylinder"
readme = "README.md"
[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"

[dev-dependencies]
trybuild = "1.0"